Fix z-index of header

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -79,7 +79,7 @@
   right: 0;
   left: 0;
   transition: left 0.3s;
-  z-index: 6;
+  z-index: 26;
 
   @media (min-width: 1460px) {
     left: 240px;
